# cxr

./: CMakeLists.txt  CXR.cpp  CXR.dsp  CXR.h  CmdLine.cpp  Makefile  ProjectHome.md  README.txt  ReadMe.txt  Resource.h  StdAfx.h  Stream.h  Tokenizer.cpp  Tokenizer.h  aaa.lst  configure.bat
Test/: ReadMe.txt  Test.cpp  cxr_inc.h  strings.cxr
src/: CMakeLists.txt  CXR.cpp  CmdLine.cpp  Tokenizer.cpp  Tokenizer.h  cxr_inc.h
test/: CMakeLists.txt
test-proj/: StdAfx.h  Test.cpp  Test.dsp  Test.h
trunk/: CMakeLists.txt  CXR.cpp  CXR.dsw  Makefile  README.txt  StdAfx.cpp  Stream.cpp  Tokenizer.cpp  configure  cxr_inc.h
trunk/Test/: Resource.h  strings.cpp
trunk/src/: CMakeLists.txt  CXR.cpp  CmdLine.h  Stream.h  Tokenizer.cpp
trunk/test/: Test.cpp
trunk/test-proj/: Test.cpp
